--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,3 +56,7 @@ android {
 flutter {
     source = "../.."
 }
+dependencies {
+    implementation 'androidx.window:window:1.3.0'
+    implementation 'androidx.window:window-java:1.3.0'
+}
